--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
 					<li><pre>Locsoló		<label class="switch"><input type="checkbox"><span class="slider"></span></label> </pre>
 					<li><pre>Ventillátor	<label class="switch"><input type="checkbox"><span class="slider"></span></label> </pre>
 					<li><pre>Ablak		<label class="switch"><input type="checkbox"><span class="slider"></span></label> </pre>
-					<li><pre>Fűtés		<input type="number" name="temp" value="20" step="1" style="width: 40px"></pre>
+					<li><pre>Fűtés		<input type="number" name="temp" value="20" min="0" max="30" step="1" style="width: 40px"></pre>
 				</ul>
 			</td>
 			<td  >
