--- a/pages/index.html
+++ b/pages/index.html
@@ -49,16 +49,25 @@
 			</td>
 			<td class="keret" rowspan="2">
 				<a style="font-size:26px">Bent</a>
-				<ul>
-					<li>hőmérséklet 
-					<li>páratartalom
-				</ul>
+				<br>
+				<label class="adatok2">hőmérséklet 
+				<span class="adat"><img src="hom.png"class="icon" alt="hőm"></span>
+				</label>
+				<br>
+				<label class="adatok2">páratartalom
+				<span class="adat"><img src="para.png" class="icon"alt="pára"></span>
+				</label>
+				<br>
 				<hr>
 				<a style="font-size:26px">Kint</a>
-				<ul>
-					<li>hőmérséklet
-					<li>páratartalom
-				</ul>
+				<br>
+				<label class="adatok2">hőmérséklet
+				<span class="adat"><img src="hom.png"class="icon" alt="hőm"></span>
+				</label>
+				<br>
+				<label class="adatok2">páratartalom
+				<span class="adat"><img src="para.png" class="icon" alt="pára"></span>
+				</label>
 			</td>
 			<td style="vertical-align:top" class="logo" >
 				 <img src="logo.png" id="logo"> 
@@ -92,16 +101,27 @@
 				<div class="cim">Fűtés</div>
 			</td>
 			<td class="keret" >
-				<ul>
-					<li>CO2 szint
-					<li>Földnedvesség
-					<li>Eső
-					<li>Kuka
-				</ul>
+				<label class="adatok">CO2 szint
+					<span class="adat">0,5%</span>
+				</label>
+				<br>
+				<label class="adatok">Földnedvesség
+				<span class="adat">82%</span>
+				</label>
+				<br>
+				<label class="adatok">Eső
+				<span class="adat">Igen</span>
+				</label>
+				<br>
+				<label class="adatok">Kuka
+				<span class="adat"><img src="k_tele.png" id="kuka" alt="tele"></span>
+				</label>
+				
 				
 			</td>
 			<td class="keret" >
 				<div class="cim">Hangulatvilágítás</div>
+				<img id="hangulat" src="kek.png"  alt="kek">
 				<label class="container">Kék
 					<input type="radio" name="color" value="blue">
 					<span class="checkmark"></span>
