--- a/pages/index.html
+++ b/pages/index.html
@@ -102,8 +102,14 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="keret" id="futes">
+			<td class="keret">
 				<div class="cim">Fűtés</div>
+				<div class="circle">
+				<div class="moving" ></div>
+				<label class="futes">
+					22°C
+				</label>
+				</div>
 			</td>
 			<td class="keret" >
 				<label class="adatok">CO2 szint
