checkbox check on ws message

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
 			<td class="keret"  rowspan="2">
 				
 					<label class="container2">Lámpa &#10112;
-						<input type="checkbox" class="switch" value="Neumann/SmartRoom/Livingroom/Lamp/1;">
+						<input type="checkbox" class="switch" id=Neumann/SmartRoom/Livingroom/Lamp/1; value="Neumann/SmartRoom/Livingroom/Lamp/1;">
 						<span class="checkmark2"></span>
 					</label>
 					
