--- a/pages/index.html
+++ b/pages/index.html
@@ -144,12 +144,12 @@
 					<span class="checkmark" id="redBox"></span>
 				</label>
 				
-				<label class="container">Green
+				<label class="container">Zöld
 					<input type="radio" name="color" id="green" value="zold" >
 					<span class="checkmark" id="greenBox"></span>
 				</label>
 				
-				<label class="container">Blue
+				<label class="container">Kék
 					<input type="radio" name="color" id="blue" value="kek">
 					<span class="checkmark" id="blueBox"></span>
 				</label>
